--- a/app/src/main/res/layout/activity_edit_procedure.xml
+++ b/app/src/main/res/layout/activity_edit_procedure.xml
@@ -4,44 +4,168 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/greenn"
+    android:backgroundTint="@color/grey_background_tint"
+    android:backgroundTintMode="src_over"
     android:orientation="vertical"
-    tools:context=".EditProcedureActivity"
-    android:padding="20dp">
+    android:padding="20dp"
+    tools:context=".EditProcedureActivity">
 
     <TextView
-        android:id="@+id/deleteProcedureHeading_tv"
+        android:id="@+id/procedureHeading_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Delete Procedure"
-        android:textColor="@color/green"
+        android:text="Edit Procedure"
+        android:textColor="@color/white"
         android:textSize="20sp" />
 
     <View
-        android:id="@+id/divider7"
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="5dp"
-        android:background="@color/green" />
+        android:background="@color/white" />
+
+    <TextView
+        android:id="@+id/spinnerLabel_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:labelFor="@id/procedureCategory_spinner"
+        android:text="Select a procedure category below"
+        android:textColor="@color/white" />
 
     <Spinner
-        android:id="@+id/dataSpinner"
-        style="@style/Widget.AppCompat.Spinner.DropDown"
+        android:id="@+id/procedureCategory_spinner"
+        style="@android:style/Widget.Spinner.DropDown"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="100dp"
-        android:backgroundTint="@color/green"
-        android:backgroundTintMode="add"
-        android:dropDownSelector="@color/green"
+        android:layout_marginTop="5dp"
         android:minHeight="48dp" />
 
+    <TextView
+        android:id="@+id/descriptionLabel_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Description"
+        android:textColor="@color/white" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/procedureDescription_tb"
+        android:layout_width="300dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp"
+        app:boxBackgroundColor="@color/white"
+        app:boxBackgroundMode="outline"
+        app:boxStrokeColor="@color/green"
+        app:endIconTint="@color/green"
+        app:startIconTint="@color/green">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="top"
+            android:inputType="textMultiLine"
+            android:paddingStart="5dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="5dp"
+            android:paddingBottom="5dp"
+            android:textColor="@color/black" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/procedurePerformerLabel_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Person who performed procedure"
+        android:textColor="@color/white" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/procedurePerformer_tb"
+        android:layout_width="300dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp"
+        app:boxBackgroundColor="@color/white"
+        app:boxBackgroundMode="outline"
+        app:boxCornerRadiusBottomEnd="5dp"
+        app:boxCornerRadiusBottomStart="5dp"
+        app:boxCornerRadiusTopEnd="5dp"
+        app:boxCornerRadiusTopStart="5dp"
+        app:boxStrokeColor="@color/white">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="start|top"
+            android:padding="5dp"
+            android:textAlignment="viewStart"
+            android:textColor="@color/black" />
+
+
+    </com.google.android.material.textfield.TextInputLayout>
+
     <Button
-        android:id="@+id/deleteBtn"
+        android:id="@+id/procedureDate_btn"
+        style="@style/Widget.Material3.Button.ElevatedButton"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:backgroundTint="@color/green"
+        android:elevation="6dp"
+        android:text="Date performed"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:cornerRadius="10dp"
+        app:strokeColor="@color/white"
+        app:strokeWidth="0.5dp" />
+
+    <TextView
+        android:id="@+id/dateDisplay_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="03/01/2001"
+        android:textColor="@color/white"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/save_btn"
+        style="@style/Widget.Material3.Button"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
         android:backgroundTint="@color/green"
-        android:text="Delete"
-        android:textColor="@color/white" />
+        android:backgroundTintMode="src_over"
+        android:elevation="6dp"
+        android:text="Save Edit"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:cornerRadius="10dp"
+        app:strokeColor="@color/white"
+        app:strokeWidth="0.5dp" />
+
+    <Button
+        android:id="@+id/cancel_btn"
+        style="@style/Widget.Material3.Button"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#FA3122"
+        android:backgroundTintMode="src_over"
+        android:elevation="6dp"
+        android:text="Cancel"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:cornerRadius="10dp" />
+
 </LinearLayout>
