--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:text="@string/login"
         android:textColor="#ffffff"
-        android:textSize="30sp"
+        android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
@@ -33,13 +33,14 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="550dp"
         android:background="@drawable/background_bottom"
         android:orientation="vertical"
         android:padding="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageView3">
 
         <TextView
             android:id="@+id/emailTv"
@@ -50,21 +51,28 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/emailTb"
             android:layout_width="320dp"
-            android:layout_height="50dp"
+            android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="24dp"
-            android:background="@drawable/edit_text_back"
-            android:ems="10"
-            android:hint="@string/email_example"
-            android:inputType="textEmailAddress"
-            android:padding="8dp"
-            android:textColor="@color/green"
-            android:textSize="20sp"
-            android:autofillHints="" />
+            android:textColorHint="@color/green"
+            app:boxBackgroundColor="@color/white"
+            app:boxBackgroundMode="outline"
+            app:boxStrokeColor="@color/green"
+            app:helperTextTextColor="@color/green">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/email_example"
+                android:inputType="textEmailAddress"
+                android:padding="5dp"
+                android:textColor="@color/green"
+                android:textSize="20sp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/passwordTv"
@@ -75,52 +83,52 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/passwordTb"
             android:layout_width="320dp"
-            android:layout_height="50dp"
+            android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="24dp"
-            android:background="@drawable/edit_text_back"
-            android:ems="10"
-            android:inputType="textPassword"
-            android:padding="8dp"
-            android:textColor="#347C17"
-            android:textColorHint="#040404"
-            android:textSize="20sp"
-            tools:ignore="SpeakableTextPresentCheck"
-            android:importantForAutofill="no" />
+            android:layout_marginBottom="5dp"
+            app:boxBackgroundColor="@color/white"
+            app:boxBackgroundMode="outline"
+            app:boxStrokeColor="@color/green"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/green"
+            app:passwordToggleTintMode="src_in">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="textPassword"
+                android:padding="5dp"
+                android:textColor="@color/green"
+                android:textSize="20sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/createAccBtn"
+            style="@style/Widget.Material3.Button.TextButton"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dp"
+            android:padding="0dp"
+            android:text="@string/don_t_have_an_account"
+            android:textAlignment="viewStart"
+            android:textColor="@color/green"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/loginBtn"
             android:layout_width="320dp"
             android:layout_height="50dp"
-            android:layout_gravity="center_horizontal"
-            android:backgroundTint="@color/green"
-            android:text="@string/login"
-            android:textColor="#ffffff"
-            android:textSize="16sp"
-            app:cornerRadius="50dp" />
-
-        <TextView
-            android:id="@+id/createAccTv"
-            android:layout_width="320dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:text="@string/don_t_have_an_account"
-            android:textColor="#000000"
-            android:textSize="16sp" />
-
-        <Button
-            android:id="@+id/createAccBtn"
-            android:layout_width="320dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
+            android:layout_gravity="center_horizontal"
             android:backgroundTint="@color/green"
-            android:text="@string/create_an_account"
+            android:elevation="5dp"
+            android:text="@string/login"
             android:textColor="#ffffff"
             android:textSize="16sp"
             app:cornerRadius="50dp" />
