--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#077734</color>
     <color name="grey">#777777</color>
+    <color name="grey_background_tint">#54000000</color>
 </resources>
